Move existing media examples under 'one.jpro.media.example' package