@@ -1,31 +1,41 @@
-apply plugin: 'application'
 apply plugin: 'org.openjfx.javafxplugin'
 apply plugin: 'jpro-gradle-plugin'
 
 dependencies {
-  implementation project(":jpro-sound")
-  implementation project(":jpro-sessions")
-  implementation project(":htmlscrollpane")
-  implementation project(":jpro-media")
-  implementation "com.sandec.jpro:jpro-webapi:$JPRO_VERSION"
+    implementation project(":jpro-sound")
+    implementation project(":jpro-sessions")
+    implementation project(":htmlscrollpane")
+    implementation project(":jpro-media")
+    implementation "com.sandec.jpro:jpro-webapi:$JPRO_VERSION"
 
-  implementation "org.bytedeco:javacv-platform:$javacvVersion"
-//  compileOnly "org.bytedeco:javacv-platform:$javacvVersion" // when running on JPro
-  implementation "io.github.mkpaz:atlantafx-base:1.1.0"
-  runtimeOnly "ch.qos.logback:logback-classic:1.4.5"
+    implementation "org.bytedeco:javacv-platform:$javacvVersion"
+//    compileOnly "org.bytedeco:javacv-platform:$javacvVersion" // when running on JPro
+    implementation "io.github.mkpaz:atlantafx-base:1.1.0"
+    runtimeOnly "ch.qos.logback:logback-classic:1.4.5"
 }
 
 //mainClassName = 'one.jpro.utils.example.JProSoundSample'
 //mainClassName = 'one.jpro.utils.example.SessionManagerSample'
 //mainClassName = 'one.jpro.utils.example.HTMLScrollPaneSample'
-//mainClassName = 'one.jpro.utils.example.MediaRecorderSample'
-//mainClassName = 'one.jpro.utils.example.MediaPlayerSample'
-mainClassName = 'one.jpro.utils.example.MediaRecorderAndPlayerSample'
+
+mainClassName = 'one.jpro.media.example.MediaPlayerSample'
+//mainClassName = 'one.jpro.media.example.MediaRecorderSample'
+//mainClassName = 'one.jpro.media.example.MediaRecorderAndPlayerSample'
+//mainClassName = 'one.jpro.media.example.simple.JProPlayerApplication'
+//mainClassName = 'one.jpro.media.example.simple.JProRecorderApplication'
 
 javafx {
-  version = "$JAVAFX_VERSION"
-  modules = [ 'javafx.base', 'javafx.graphics', 'javafx.controls',
-              'javafx.fxml', 'javafx.media', 'javafx.swing', 'javafx.web' ]
+    version = "$JAVAFX_VERSION"
+    modules = ['javafx.base', 'javafx.graphics', 'javafx.controls',
+               'javafx.fxml', 'javafx.media', 'javafx.swing', 'javafx.web']
+}
+
+run {
+    doFirst {
+        jvmArgs = [
+                '--add-exports', 'javafx.base/com.sun.javafx.event=one.jpro.media'
+        ]
+    }
 }
 
 application {
